<resources>
    <string name="app_name">calculator</string>
    <string name="abc"><![CDATA[<<]]></string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="minus">_</string>
    <string name="_6">6</string>
    <string name="divide">/</string>
    <string name="x">X</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="percent">%</string>
    <string name="brackets">( )</string>
    <string name="division">÷</string>
    <string name="_x">x</string>
    <string name="admin">ADMIN</string>
    <string name="login_to_you_account">Login to you account</string>
    <string name="welcome">Welcome</string>
    <string name="pk_93">(PK)+93</string>
    <string name="pk_923">(PK)+923</string>
    <string name="pk_92">(PK)+92</string>
    <string name="send_otp">SEND OTP</string>
    <string name="_030123456789">030123456789</string>
    <string name="_30123456789">30123456789</string>
</resources>