<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#04293A"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:background="#051523"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:id="@+id/results"
            android:gravity="end"
            android:textAlignment="gravity"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:textSize="50sp"
            android:textColor="#ADFFFFFF"
            android:id="@+id/input"
            android:gravity="end"
            android:textAlignment="gravity"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >


            <TextView
                android:id="@+id/divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#ADFFFFFF"
                android:textSize="30sp"
                android:gravity="center"
                android:textAlignment="center"
                android:background="@drawable/textview_border"
                android:text="@string/division"/>

            <TextView
                android:id="@+id/multiplication"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/_x"
                android:textAlignment="center"
                android:textColor="#ADFFFFFF"
                android:textSize="30sp"

                />

            <TextView
                android:id="@+id/clearByValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/textview_border"
                android:gravity="center"
                android:text="@string/abc"
                android:textAlignment="center"
                android:textColor="#ADFFFFFF"
                android:textSize="30sp"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >


            <TextView
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#ADFFFFFF"
                android:textSize="30sp"
                android:gravity="center"
                android:textAlignment="center"
                android:background="@drawable/textview_border"

                android:text="@string/_7"/>

            <TextView
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#ADFFFFFF"
                android:textSize="30sp"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/_8"
                android:background="@drawable/textview_border"


                />


            <TextView
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#ADFFFFFF"
                android:textSize="30sp"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/_9"
                android:background="@drawable/textview_border"


                />

            <TextView
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#ADFFFFFF"
                android:textSize="40sp"
                android:gravity="center"
                android:textAlignment="center"
                android:background="@drawable/textview_border"

                android:text="-"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >


            <TextView
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#ADFFFFFF"
                android:textSize="30sp"
                android:gravity="center"
                android:textAlignment="center"
                android:background="@drawable/textview_border"

                android:text="@string/_4"/>

            <TextView
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#ADFFFFFF"
                android:textSize="30sp"
                android:gravity="center"
                android:textAlignment="center"
                android:background="@drawable/textview_border"

                android:text="@string/_5"

                />


            <TextView
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#ADFFFFFF"
                android:textSize="30sp"
                android:gravity="center"
                android:textAlignment="center"
                android:background="@drawable/textview_border"

                android:text="@string/_6"

                />

            <TextView
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#ADFFFFFF"
                android:textSize="30sp"
                android:gravity="center"
                android:textAlignment="center"
                android:background="@drawable/textview_border"
                android:text="@string/plus"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/one"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:textColor="#ADFFFFFF"
                        android:textSize="30sp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:background="@drawable/textview_border"

                        android:text="@string/_1"/>

                    <TextView
                        android:id="@+id/two"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:textColor="#ADFFFFFF"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        android:background="@drawable/textview_border"

                        android:text="@string/_2"

                        />


                    <TextView
                        android:id="@+id/three"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="#ADFFFFFF"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:text="@string/_3"

                        android:background="@drawable/textview_border"

                        />



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/zero"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:textColor="#ADFFFFFF"
                        android:textSize="30sp"
                        android:gravity="center"
                        android:background="@drawable/textview_border"
                        android:text="@string/_0"/>




                </LinearLayout>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_weight="3"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/equal"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:background="#00ACC1"
                    android:textAlignment="center"
                    android:text="@string/equal"

                    />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
