<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#251D35"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:textColor="@color/white"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/questrial"
            android:text="@string/welcome"
            android:textColor="#FFB300"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_you_account"
            android:textColor="@color/white"
            android:textSize="13sp" />


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/pk_92"
                    android:textColor="@color/black"
                    android:textSize="20sp"

                    >


                </TextView>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/down_arrow"
                    android:padding="9dp"


                    >

                </ImageView>

                <View
                    android:layout_width="0.1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black">

                </View>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/_30123456789"
                    android:padding="10dp">

                </EditText>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="60dp"
            app:cardCornerRadius="15dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FB8C00"
                android:gravity="center"
                android:text="@string/send_otp"
                android:textColor="@color/white"
                android:textSize="20sp">

            </TextView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>